# hackathon-projekt-1

./: .env  .env.example  .gitignore  .python-version  Makefile  Podsumowanie.md  README.MVP.md  README.PRD.md  README.md  contact_masker.py  docker-compose.yml  extract_cities.py  launch_masker.bat  masker.py  pormpt to analizy.md  priv_masker_anonymizer.py  requirements.txt  spacy.py  spacy_anonymizer.py
Zadanie/: DANE_BEZ_TWARZY.md  wymagane_pliki.md
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: celery_app.py  main.py
backend/entrypoints/: api.sh  beat.sh  worker.sh
backend/tests/: conftest.py  test_jobs.py
dawid_cli/: CHECK_LLM_MODE.md  LLM_GENERATION_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  env.template  example_usage.py  process_file.py  prompts.yaml  requirements.txt
dawid_cli/src/: __init__.py
dawid_cli/tests/: README.md  __init__.py  test_comparison.py  test_simple.py
pliki wynikowe/: dane_zamaskowane_full.txt  dane_zamaskowane_sample_10.txt
synthesize/: .gitignore  ARCHITECTURE.md  config.yaml  env.example  main.py  pyproject.toml
synthesize/src/: __init__.py  core.py  faker_processor.py  llm_client.py  prompts.py
synthesize/tests/: __init__.py  test_n_lines.py  test_random_line.py  test_specific_line.py
wymagane_pliki/: README.md  output_Application_Fail_Successfully.txt  performance_Application_Fail_Successfully.txt  preprocessing_Application_Fail_Successfully.md  presentation_Application_Fail_Successfully.md  synthetic_generation_Application_Fail_Successfully.md
(+18 files in other folders)
