[project]
name = "synthesize"
version = "0.1.0"
description = "Prosty moduł do syntezy danych PII w języku polskim"
readme = "ARCHITECTURE.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=3.0.4",
    "faker>=38.2.0",
    "tqdm>=4.67.1",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
synthesize = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

